terminando de rellenar toda la informacion de las unidades, commit antes de empezar con css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <meta charset="UTF-8">
@@ -12,7 +12,7 @@
 
     <header>
         <a href="index.html">
-            <img src="https://academy.plenumsoft.com.mx/theming/asset/images/logo.png" alt="Logo Plenumsoft Academy">
+            <img src="img/logo-plenumsoft-negro.png" width="100" alt="Logo Plenumsoft">
         </a>
         <nav>
             <ul>
@@ -32,7 +32,9 @@
     <main>
         <section>
             <h2>Descripción del curso</h2>
-            <p>En este curso aprenderás desde los fundamentos de ingeniería de software hasta el desarrollo de aplicaciones web modernas mediante tecnologías web HTML, CSS, JavaScript y uso de frameworks como Angular.</p>
+            <p>En este curso aprenderás desde los fundamentos de ingeniería de software hasta el desarrollo de
+                aplicaciones web modernas mediante tecnologías web HTML, CSS, JavaScript y uso de frameworks como
+                Angular.</p>
         </section>
 
         <hr>
@@ -54,7 +56,7 @@
                 <ul>
                     <li><a href="unidad1.html">Módulo 1: Inducción al programa Células Plenum </a></li>
                     <li><a href="unidad2.html">Módulo 2: Fundamentos de Programación</a></li>
-                    <li><a href="unidad3.html">Módulo 3: Fundamentos de Programación Web</a></li>|
+                    <li><a href="unidad3.html">Módulo 3: Fundamentos de Programación Web</a></li>
                 </ul>
             </nav>
         </section>
@@ -64,6 +66,21 @@
         <section>
             <h2>Duración del curso</h2>
             <p>El curso tiene una duración de 24 semanas.</p>
+        </section>
+
+        <hr>
+
+        <section>
+            <h2>Prácticas reales</h2>
+            <h3>Práctica Java y MySQL</h3>
+            <img src="img/javasql.png" alt="Práctica Java y MySQL">
+            <h3>Uso de Triggers en bases de datos</h3>
+            <img src="img/triggers.png" alt="Uso de Triggers">
+            <h3>Tutorial HTML</h3>
+            <iframe width="1063" height="598" src="https://www.youtube.com/embed/-oK6zL01fNM"
+                title="Curso HTML &amp; CSS ( 1 / 5 ): Fundamentos HTML - jonmircha" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </section>
 
         <hr>
@@ -84,14 +101,24 @@
                 <input type="submit" value="Enviar">
             </form>
         </section>
+
     </main>
 
     <hr>
 
     <footer>
-        <img src="https://academy.plenumsoft.com.mx/favicon.ico" alt="Icono de Plenunsoft Academy">
-        <p>Plenunsoft Academy 2026</p>
-        <img src="https://pngimg.com/uploads/instagram/instagram_PNG10.png" width="30" height="30" alt="Icono de Instagram">
+        <img src="img/logo-celulas-color.png" width="100" alt="Icono de Plenunsoft">
+        <p>Plenunsoft 2026</p>
+        <a href="#">
+            <img src="https://tecvi2.itmerida.mx/pluginfile.php/1/theme_moove/logo/1715200812/LOGO.png" width="350"
+                height="100" alt="Icono de Instagram">
+        </a>
+        <pre>
+MID
+Oficina
+Mérida, Yucatán
+info@plenumsoft.com
+</pre>
     </footer>
 </body>
 
