--- a/unidad2.html
+++ b/unidad2.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <a href="index.html">
-            <img src="https://academy.plenumsoft.com.mx/theming/asset/images/logo.png" alt="Logo Plenumsoft Academy">
+            <img src="img/logo-plenumsoft-negro.png" width="100" alt="Logo Plenumsoft">
         </a>
         <nav>
             <ul>
@@ -50,15 +50,20 @@
                     <summary>Ver actividades</summary>
                     <ul>
                         <li>2.1.1 Viaje al Fondo de los Datos</li>
-                        <a href="https://youtube.com/playlist?list=PLGC1kwoNMbVZG2QaDnd6ME_lqNF4GF4S4">Enlace de consulta</a>
+                        <a href="https://youtube.com/playlist?list=PLGC1kwoNMbVZG2QaDnd6ME_lqNF4GF4S4">Enlace de
+                            consulta</a>
                         <li>2.1.2 Bases de datos relacionales</li>
-                        <a href="https://youtube.com/playlist?list=PL3y8v30wQ1s9e6TS_fGGhhuVFOa3w-6G2">Enlace de consulta</a>
+                        <a href="https://youtube.com/playlist?list=PL3y8v30wQ1s9e6TS_fGGhhuVFOa3w-6G2">Enlace de
+                            consulta</a>
                         <li>2.1.3 Relaciones entre tablas</li>
-                        <a href="https://youtube.com/playlist?list=PLi_UneHMpzONsjIf0xl-02eQIAH7T2_t8">Enlace de consulta</a>
+                        <a href="https://youtube.com/playlist?list=PLi_UneHMpzONsjIf0xl-02eQIAH7T2_t8">Enlace de
+                            consulta</a>
                         <li>2.1.4 mooc SQLfácil, fácil</li>
-                        <a href="https://youtube.com/playlist?list=PLi_UneHMpzON3xmBc6_JfFRz7BMFk14Kl">Enlace de consulta</a>
+                        <a href="https://youtube.com/playlist?list=PLi_UneHMpzON3xmBc6_JfFRz7BMFk14Kl">Enlace de
+                            consulta</a>
                         <li>Contenido Opcional</li>
-                        <a href="https://www.youtube.com/playlist?list=PL3y8v30wQ1s8yfsbp-YwV8Rc3eNL8YoF8">Enlace de consulta</a>
+                        <a href="https://www.youtube.com/playlist?list=PL3y8v30wQ1s8yfsbp-YwV8Rc3eNL8YoF8">Enlace de
+                            consulta</a>
                         <li>Evaluación del tema 2.1</li>
                     </ul>
                 </details>
@@ -71,13 +76,21 @@
                 <details>
                     <summary>Ver actividades</summary>
                     <ul>
-                        <li>1.2.1 Principios de la Ingeniería de Requerimientos</li>
-                        <a href="https://youtu.be/fLcWpOY3h7k">Ver contenido</a>
-                        <li>1.2.2 ingeniería de Requerimientos de Software</li>
-                        <a
-                            href="https://youtube.com/playlist?list=PLCVGhLzsMEq8-Q7Mrvq5Q6jrHo4nDJpod&si=rcwRaWdhkMa6TYaU">Ver
-                            lista de reproducción</a>
-                        <li>Evaluación del tema 1.2</li>
+                        <li>2.2.1 Normalización</li>
+                        <a href="https://youtu.be/JRCjSUbYKxI">Ver contenido</a>
+                        <li>2.2.2. Primera Forma Normal</li>
+                        <a href="https://youtu.be/JZmSYf5J0C8">Ver contenido</a>
+                        <li>2.2.3. Segunda Forma Normal</li>
+                        <a href="https://youtu.be/FlG-0LMXgzE">Ver contenido</a>
+                        <li>2.2.4. Tercera Forma Normal</li>
+                        <a href="https://youtu.be/g76kIh_jdLQ">Ver contenido</a>
+                        <li>2.2.5. Desnormalizaciónde BD</li>
+                        <a href="https://youtu.be/2A2183jBLrg">Ver contenido</a>
+                        <li>Contenido opcional</li>
+                        <a href="https://youtube.com/playlist?list=PLE19WVM4rff1ion43QTNdbbejTKNhYs8x">Enlace de
+                            consulta</a>
+                        <li>Evaluación del tema 2.2</li>
+
                     </ul>
                 </details>
             </article>
@@ -88,15 +101,15 @@
                 <details>
                     <summary>Ver actividades</summary>
                     <ul>
-                        <li>1.3.1 Introducción a la arquitectura de software (01)</li>
-                        <a href="https://youtu.be/n6XvfUG4QBQ">Ver contenido</a>
-                        <li>1.3.2 Introducción a la arquitectura de software (02)</li>
-                        <a href="https://youtu.be/IsT5o0orRTo">Ver contenido</a>
-                        <li>1.3.3 Introducción Arquitectura de Software</li>
-                        <a href="https://youtu.be/ZjxTNGpgP4k">Ver contenido</a>
-                        <li>1.3.4 Arquitectura del software</li>
-                        <a href="https://youtu.be/MbX0hGRiJm8">Ver contenido</a>
-                        <li>Evaluación del tema 1.3</li>
+                        <li>2.3.1. Lenguaje de Consulta Estructurado (SQL) | Conceptos básicos</li>
+                        <a href="https://youtu.be/HlRhFDY1Bmg">Ver contenido</a>
+                        <li>2.3.2. CursoSQL</li>
+                        <a href="https://youtube.com/playlist?list=PLU8oAlHdN5Bmx-LChV4K3MbHrpZKefNwn">Enlace de
+                            consulta</a>
+                        <li>Contenido opcional</li>
+                        <a href="https://www.youtube.com/playlist?list=PLTt_5WPJqE-l90KDcxe1njAvDqwhrvbLV">Enlace de
+                            consulta</a>
+                        <li>Laboratorio del tema 2.3</li>
                     </ul>
                 </details>
             </article>
@@ -108,15 +121,17 @@
                 <details>
                     <summary>Ver actividades</summary>
                     <ul>
-                        <li>1.4.1 Introducción a los patrones de diseño (01)</li>
-                        <a href="https://youtu.be/9QhIVc2_wkk">Ver contenido</a>
-                        <li>1.4.2 Patrones de Diseño de software</li>
-                        <a href="https://youtu.be/G4mFD16PGMg">Ver contenido</a>
-                        <li>1.4.3 Curso de Patrones de diseño -2 Singleton</li>
-                        <a href="https://youtu.be/gocJeOHtj9w">Ver contenido</a>
-                        <li>1.4.4 Introducción al Patrón Singleton</li>
-                        <a href="https://youtu.be/I6HkKii8jlM">Ver contenido</a>
-                        <li>Evaluación del tema 1.4</li>
+                        <li>2.4.1. Introducción SQL Oracle</li>
+                        <a href="https://youtu.be/Hb4wkSClKec">Ver contenido</a>
+                        <li>2.4.2. Talleres Oracle : Uso de Triggers</li>
+                        <a href="https://youtu.be/DRon_SFQ5IY">Ver contenido</a>
+                        <li>2.4.3. Triggers: Curso de Microsoft SQL Server</li>
+                        <a href="https://youtu.be/jLk4BtAKZUM">Ver contenido</a>
+                        <li>2.4.4. Triggers-Disminuir existencia inventario (Microsoft SQL Server)</li>
+                        <a href="https://youtu.be/d6Vm5LRSMYM">Ver contenido</a>
+                        <li>Contenido opcional</li>
+                        <a href="https://dev.mysql.com/doc/refman/8.0/en/trigger-syntax.html">Enlace de consulta</a>
+                        <li>Laboratorio del tema 2.4</li>
                     </ul>
                 </details>
             </article>
@@ -129,15 +144,31 @@
                 <details>
                     <summary>Ver actividades</summary>
                     <ul>
-                        <li>1.4.1 Introducción a los patrones de diseño (01)</li>
-                        <a href="https://youtu.be/9QhIVc2_wkk">Ver contenido</a>
-                        <li>1.4.2 Patrones de Diseño de software</li>
-                        <a href="https://youtu.be/G4mFD16PGMg">Ver contenido</a>
-                        <li>1.4.3 Curso de Patrones de diseño -2 Singleton</li>
-                        <a href="https://youtu.be/gocJeOHtj9w">Ver contenido</a>
-                        <li>1.4.4 Introducción al Patrón Singleton</li>
-                        <a href="https://youtu.be/I6HkKii8jlM">Ver contenido</a>
-                        <li>Evaluación del tema 1.4</li>
+                        <li>2.5.1. Programming Paradigms, Assembly, Procedural</li>
+                        <a href="https://youtu.be/AmS2-9KEeS0">Ver contenido</a>
+                        <li>2.5.2. Paradigmas de programación</li>
+                        <a href="https://youtu.be/91iQAWCiiCo">Ver contenido</a>
+                        <li>2.5.3. El paradigma de programación orientado a objetos</li>
+                        <a href="https://youtu.be/hkRvEgnmXkI">Ver contenido</a>
+                        <li>2.5.4. Fundamentos de la Programación Orientada a Objetos</li>
+                        <a href="https://youtu.be/AAKoccH230Y">Ver contenido</a>
+                        <li>2.5.5. Programación Orientada a Objetos (POO) -Objetos y Clases</li>
+                        <a href="https://youtu.be/ykpT5P7171M">Ver contenido</a>
+                        <li>2.5.6. Object Oriented Concepts
+                            Enunciados de nivel 2 podrían ser creados por proveedores del curso en el futuro.
+                        </li>
+                        <a href="https://youtu.be/3bMsY5a7cBo">Ver contenido</a>
+                        <li>2.5.7. Intro to Object Oriented Programming</li>
+                        <a href="https://youtu.be/SiBw7os-_zI">Ver contenido</a>
+                        <li>2.5.8. ¿Qué es la programación orientada a objetos?</li>
+                        <a href="https://youtu.be/DlphYPc_HKk">Ver contenido</a>
+                        <li>2.5.9. Programación Orientada a Objetos explicada</li>
+                        <a href="https://youtu.be/Nka4JSBgf7I">Ver contenido</a>
+                        <li>2.5.10. Qué es la programación orientada a objetos</li>
+                        <a
+                            href="https://desarrolloweb.com/articulos/499.php#:~:text=La%20programaci%C3%B3n%20Orientada%20a%20objetos%20se%20define%20como%20un%20paradigma,los%20objetivos%20de%20las%20aplicaciones">Enlace
+                            de consulta</a>
+                        <li>Evaluación del tema 2.5</li>
                     </ul>
                 </details>
             </article>
@@ -148,15 +179,23 @@
                 <details>
                     <summary>Ver actividades</summary>
                     <ul>
-                        <li>1.4.1 Introducción a los patrones de diseño (01)</li>
-                        <a href="https://youtu.be/9QhIVc2_wkk">Ver contenido</a>
-                        <li>1.4.2 Patrones de Diseño de software</li>
-                        <a href="https://youtu.be/G4mFD16PGMg">Ver contenido</a>
-                        <li>1.4.3 Curso de Patrones de diseño -2 Singleton</li>
-                        <a href="https://youtu.be/gocJeOHtj9w">Ver contenido</a>
-                        <li>1.4.4 Introducción al Patrón Singleton</li>
-                        <a href="https://youtu.be/I6HkKii8jlM">Ver contenido</a>
-                        <li>Evaluación del tema 1.4</li>
+                        <li>2.6.1 Difference between Java and JavaScript</li>
+                        <a href="https://youtu.be/k0SMuHlmATs">Ver contenido</a>
+                        <li>2.6.2. Java vs JavaScript</li>
+                        <a href="https://youtu.be/Wpeym1_lmPo">Ver contenido</a>
+                        <li>2.6.3. Curso de programación en Java</li>
+                        <a href="https://youtube.com/playlist?list=PL-Mlm_HYjCo9vojnWbPTs6nV51J8WV_O5">Enlace de
+                            consulta</a>
+                        <li>2.6.4. Curso Java y MySQL</li>
+                        <a href="https://www.youtube.com/playlist?list=PL-Mlm_HYjCo_uketceEXL4CuoPf9t38FZ">Enlace de
+                            consulta</a>
+                        <li>Contenido opcional</li>
+                        <a href="https://www.udemy.com/course/java-basico-desde-cero-gratis/">Enlace de consulta</a>
+                        <a
+                            href="https://www.udemy.com/course/fundamentos-de-java-aprende-a-programar-java-desde-cero-sin-misterios/">Enlace
+                            de consulta</a>
+                        <a href="https://www.w3schools.com/java/default.asp">Enlace de consulta</a>
+                        <li>Laboratorio del tema 2.6</li>
                     </ul>
                 </details>
             </article>
@@ -168,8 +207,32 @@
                 <details>
                     <summary>Ver actividades</summary>
                     <ul>
-                        <li>1.4.1 Introducción a los patrones de diseño (01)</li>
-                        <a href="https://youtu.be/9QhIVc2_wkk">Ver contenido</a>
+                        <li>2.7.1. Arquitectura del software multicapa
+                        </li>
+                        <a href="https://youtu.be/kHvxX1E9vIU">Ver contenido</a>
+                        <li>2.7.2. ¿Qué es BACKEND y FRONTEND?
+                        </li>
+                        <a href="https://youtu.be/50RbVujPPGs">Ver contenido</a>
+                        <li>2.7.3. API: qué es y para qué sirve
+                        </li>
+                        <a href="https://www.xataka.com/basics/api-que-sirve">Enlace de consulta</a>
+                        <li>2.7.4. Qué es una API
+                        </li>
+                        <a href="https://youtu.be/mawPztD3zl0">Ver contenido</a>
+                        <li>2.7.5. Diferencia entre API y Webservice
+                        </li>
+                        <a href="https://youtu.be/SXZ0kDZbOas">Ver contenido</a>
+                        <li>2.7.6. ¿Qué es una API HTTP? | Cómo usar una API
+                        </li>
+                        <a href="https://youtu.be/Nw07gG6lf54">Ver contenido</a>
+                        <li>2.7.7. ¿Qué es una API REST?
+                        </li>
+                        <a href="https://youtu.be/lsMQRaeKNDk">Ver contenido</a>
+                        <li>Contenido opcional
+                        </li>
+                        <a href="https://youtu.be/Li1nCsnMaz4">Ver contenido</a>
+                        <li>Evaluación del tema 2.7
+                        </li>
                     </ul>
                 </details>
             </article>
@@ -184,9 +247,19 @@
         </nav>
 
     </main>
-
     <footer>
-        <nav>
+        <img src="img/logo-celulas-color.png" width="100" alt="Icono de Plenunsoft">
+        <p>Plenunsoft 2026</p>
+        <a href="#">
+            <img src="https://tecvi2.itmerida.mx/pluginfile.php/1/theme_moove/logo/1715200812/LOGO.png" width="350"
+                height="100" alt="Icono de Instagram">
+        </a>
+        <pre>
+MID
+Oficina
+Mérida, Yucatán
+info@plenumsoft.com
+</pre>
     </footer>
 </body>
 
