renombrando triggers.png

--- a/index.html
+++ b/index.html
@@ -109,14 +109,14 @@
 
                 <div class="example-item">
                     <h3>Uso de Triggers</h3>
-                    <img src="img/triggers.png" alt="Uso de Triggers">
+                    <img src="img/triggers-lab.png" alt="Uso de Triggers">
                 </div>
 
                 <div class="example-item">
                     <h3>Tutorial HTML</h3>
                     <iframe src="https://www.youtube.com/embed/-oK6zL01fNM" title="Curso HTML & CSS"
                         allowfullscreen></iframe>
-                        
+
                 </div>
             </div>
         </section>
