Terminando CSS de las unidades, además se añadio favicon

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Inicio</title>
     <meta name="description" content="Programa de aprendizaje desarrollo web">
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="img/favicon.png">
 </head>
 
 <body>
