--- a/unidad1.html
+++ b/unidad1.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unidad 1</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="img/favicon.png">
 </head>
 
 <body>
@@ -29,21 +30,25 @@
     </header>
 
     <main>
-        <section>
-            <h2>Introducción</h2>
-            <p>La ingeniería de software es la disciplina que aplica principios de ingeniería al desarrollo de software
-                de manera sistemática, disciplinada y cuantificable.</p>
-        </section>
+        <div class="info-main unidad-main">
+            <section class="info-unidad">
+                <h2>Introducción</h2>
+                <p>La ingeniería de software es la disciplina que aplica principios de ingeniería al desarrollo de software
+                    de manera sistemática, disciplinada y cuantificable.</p>
+                </section>
 
-        <section>
-            <h2>Objetivos de la Unidad</h2>
-            <p>Bienvenido al Módulo 1. Nuestro objetivo es que los estudiantes se familiaricen con la plataforma, la
+                <div class="divider"></div>
+
+                <section class="info-unidad">
+                    <h2>Objetivos de la Unidad</h2>
+                    <p>Bienvenido al Módulo 1. Nuestro objetivo es que los estudiantes se familiaricen con la plataforma, la
                 metodología didáctica y los contenidos del Programa Células Plenum.
-
+                
             </p>
         </section>
+    </div>
 
-        <section>
+        <section class="content-unidad">
             <h2>Contenido</h2>
 
             <article>
@@ -121,7 +126,7 @@
 
         <hr>
 
-        <nav>
+        <nav class="btn-course">
             <a href="index.html">Volver al inicio</a>
             <a href="#">EMPECEMOS!</a>
         </nav>
