--- a/unidad2.html
+++ b/unidad2.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unidad 2</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/png" href="img/favicon.png">
 </head>
 
 <body>
@@ -29,22 +30,28 @@
     </header>
 
     <main>
-        <section>
-            <h2>Introducción</h2>
-            <p>En esta unidad se introducirán los conceptos fundamentales de programación, incluyendo base de datos,
-                programación orientada a objetos y APIs.
-            </p>
-        </section>
+        <div class="info-main unidad-main">
+            <section class="info-unidad">
+                <h2>Introducción</h2>
+                <p>En esta unidad se introducirán los conceptos fundamentales de programación, incluyendo base de datos,
+                    programación orientada a objetos y APIs.
+                </p>
+            </section>
 
-        <section>
-            <h2>Objetivos de la Unidad</h2>
-            <p>Bienvenido al Módulo 2. El objetivo es que los estudiantes repasen conceptos básicos de programación que
-                han aprendido durante su formación académica y que son indispensables para los siguientes módulos del
-                Programa Células Plenum.
-            </p>
-        </section>
+            <div class="divider"></div>
 
-        <section>
+            <section class="info-unidad">
+                <h2>Objetivos de la Unidad</h2>
+                <p>Bienvenido al Módulo 2. El objetivo es que los estudiantes repasen conceptos básicos de programación
+                    que
+                    han aprendido durante su formación académica y que son indispensables para los siguientes módulos
+                    del
+                    Programa Células Plenum.
+                </p>
+            </section>
+        </div>
+        
+        <section class="content-unidad">
             <h2>Contenido</h2>
 
             <article>
@@ -247,7 +254,7 @@
 
         <hr>
 
-        <nav>
+        <nav class="btn-course">
             <a href="index.html">Volver al inicio</a>
             <a href="#">EMPECEMOS!</a>
         </nav>
