mejorando el scroll y añadiendo boton al index

--- a/index.html
+++ b/index.html
@@ -55,12 +55,14 @@
         </div>
 
         <div class="arrow-down-png">
-            <img src="img/arrow-down.png" alt="Flecha">
+            <a href="index.html#content-course">
+                <img src="img/arrow-down.png" alt="Flecha">
+            </a>
         </div>
 
         <hr>
 
-        <section class="content-course">
+        <section class="content-course" id="content-course">
             <h2>Contenido del curso</h2>
 
             <nav>
